--- a/pytorch_tensor.ipynb
+++ b/pytorch_tensor.ipynb
@@ -888,6 +888,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ADVISED TO WATCH TO GRAB A CLEARER CONCEPT\n",
+        "\n",
+        "[A Discussion on \"AUTOGRAD\"](\"https://youtu.be/MswxJw-8PvE?si=WwVHmUxups6230BX\")"
+      ],
+      "metadata": {
+        "id": "7AEm6jTHU9-j"
+      }
     }
   ]
 }
