--- a/pytorch_tensor.ipynb
+++ b/pytorch_tensor.ipynb
@@ -894,7 +894,7 @@
       "source": [
         "### ADVISED TO WATCH TO GRAB A CLEARER CONCEPT\n",
         "\n",
-        "[A Discussion on \"AUTOGRAD\"](\"https://youtu.be/MswxJw-8PvE?si=WwVHmUxups6230BX\")"
+        "[A Discussion on \"AUTOGRAD\"](\"https://youtu.be/MswxJw-8PvE?si=dcXYP9EsDYNJNeNB")"
       ],
       "metadata": {
         "id": "7AEm6jTHU9-j"
