--- a/pytorch_tensor.ipynb
+++ b/pytorch_tensor.ipynb
@@ -894,11 +894,20 @@
       "source": [
         "### ADVISED TO WATCH TO GRAB A CLEARER CONCEPT\n",
         "\n",
-        "[A Discussion on \"AUTOGRAD\"](\"https://youtu.be/MswxJw-8PvE?si=dcXYP9EsDYNJNeNB")"
+        "[A Discussion on \"AUTOGRAD\"](\"https://youtu.be/MswxJw-8PvE?si=dcXYP9EsDYNJNeNB\")"
       ],
       "metadata": {
         "id": "7AEm6jTHU9-j"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YJUdppE2Xhy7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
